# qomn

./: .gitignore  .mailmap  AUTHORS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CRYSL_LANGUAGE_SPEC.md  Cargo.toml  LICENSE  QOMN_LANGUAGE_SPEC.md  README.md  hidraulica.qomn  multi_domain.qomn  nfpa_electrico.crys  paper.md  sistema_incendios.qomn  test_suite.py  test_suite_full.py
compiler/: Cargo.toml
compiler/src/: ast.rs  batch_oracle.rs  bytecode.rs  bytecode_vm.rs  crystal_compiler.rs  hir.rs  intent_parser.rs  jit.rs  lexer.rs  lib.rs  main.rs  parser.rs  plan.rs  repl.rs  runtime.rs  server.rs  typeck.rs  units.rs  vm.rs
demo/: benchmark.html  index.html
demo/papers/: 01_main_paper.md  02_forum_posts.md  03_api_docs.md  04_investment_brief.md  papers_index.html
docs/: QOMNI_PAPER.md  VERIFICATION.md
docs/outreach/: amazon.md  meta.md
paper/: CITATION.cff  refs.bib
plans/: plan_beam_analysis.crysl  plan_beam_analysis.qomn  plan_factura_peru.crysl  plan_factura_peru.qomn  plan_pipe_hazen.crysl  plan_pipe_hazen.qomn  plan_planilla_dl728.crysl  plan_planilla_dl728.qomn  plan_pump_sizing.crysl  plan_pump_sizing.qomn  plan_sprinkler_system.crysl  plan_sprinkler_system.qomn  plan_voltage_drop.crysl  plan_voltage_drop.qomn
src/: Cargo.toml  aot_plan.rs  backend_cpu.rs  batch_oracle.rs  batch_plan.rs  benchmark_proofs.rs  bytecode.rs  bytecode_vm.rs  cognitive_memory.rs  intent_parser.rs  jit.rs  lexer.rs  lib.rs  llvm_backend.rs  main.rs  nfpa_electrico.qomn  parser.rs  plan.rs  plan_v2.rs  repl.rs  runtime.rs  server.rs  simulation_engine.rs  test_jit_dispatch.crys  typeck.rs  units.rs  vm.rs  wasm_backend.rs
stdlib/: all_domains.crys  all_domains.qomn  civil.crys  civil.qomn  electrical.crys  electrical.qomn  hvac.crys  hvac.qomn  linalg.crysl  linalg.qomn  nfpa.crys  nfpa.qomn
tests/: adversarial.rs  all_56_plans.rs  golden.rs  repeatability.rs
